Update front end files to display data from the database

--- a/config/services.yml
+++ b/config/services.yml
@@ -1,5 +1,9 @@
 services:
     phpbb.boardannouncements.listener:
         class: phpbb\boardannouncements\event\listener
+        arguments:
+            - @config
+            - @template
+            - @user
         tags:
             - { name: event.listener }
