--- a/config/services.yml
+++ b/config/services.yml
@@ -5,5 +5,6 @@ services:
             - @config
             - @template
             - @user
+            - @service_container
         tags:
             - { name: event.listener }
