--- a/config/routing.yml
+++ b/config/routing.yml
@@ -1,5 +1,3 @@
 phpbb_boardannouncements_controller:
-    pattern: /boardannouncements/{action}
-    defaults: { _controller: phpbb.boardannouncements.controller:handle }
-    requirements:
-        mode: \w+
+    pattern: /boardannouncements/close
+    defaults: { _controller: phpbb.boardannouncements.controller:close_announcement }
