RC2 Fixes - update composer.json phpbb requirement

--- a/composer.json
+++ b/composer.json
@@ -39,11 +39,13 @@
 		}
 	],
 	"require": {
-		"php": ">=5.3.3",
-		"phpbb/phpbb": "3.1.*@dev"
+		"php": ">=5.3.3"
 	},
 	"extra": {
 		"display-name": "Board Announcements",
+		"soft-require": {
+			"phpbb/phpbb": "3.1.*@dev"
+		},
 		"version-check": {
 			"host": "version.phpbb.com",
 			"directory": "/phpbb-extensions",
