Add EPV testing

--- a/composer.json
+++ b/composer.json
@@ -41,6 +41,9 @@
 	"require": {
 		"php": ">=5.3.3"
 	},
+	"require-dev": {
+		"phpbb/epv": "dev-master"
+	},
 	"extra": {
 		"display-name": "Board Announcements",
 		"soft-require": {
