--- a/config/services.yml
+++ b/config/services.yml
@@ -8,6 +8,7 @@ services:
             - @request
             - @template
             - @user
+            - @dispatcher
         tags:
             - { name: event.listener }
 
