--- a/config/services.yml
+++ b/config/services.yml
@@ -14,6 +14,7 @@ services:
     phpbb.boardannouncements.controller:
         class: phpbb\boardannouncements\controller\controller
         arguments:
+            - @config
             - @config_text
             - @dbal.conn
             - @controller.helper
