--- a/composer.json
+++ b/composer.json
@@ -47,9 +47,9 @@
 			"phpbb/phpbb": ">=3.1.0-RC2,<3.2.*@dev"
 		},
 		"version-check": {
-			"host": "version.phpbb.com",
-			"directory": "/phpbb-extensions",
-			"filename": "boardannouncements_versions.json"
+			"host": "www.phpbb.com",
+			"directory": "/customise/db/extension/boardannouncements",
+			"filename": "version_check"
 		}
 	}
 }
