--- a/composer.json
+++ b/composer.json
@@ -44,7 +44,7 @@
 	"extra": {
 		"display-name": "Board Announcements",
 		"soft-require": {
-			"phpbb/phpbb": ">=3.1.0-RC2,<3.2.*@dev"
+			"phpbb/phpbb": ">=3.1.3,<3.2.*@dev"
 		},
 		"version-check": {
 			"host": "www.phpbb.com",
