--- a/.gitattributes
+++ b/.gitattributes
@@ -5,3 +5,4 @@ travis/			export-ignore
 .gitattributes	export-ignore
 phpunit.xml.*	export-ignore
 composer.lock	export-ignore
+build.xml		export-ignore
