--- a/config/services.yml
+++ b/config/services.yml
@@ -2,6 +2,7 @@ services:
     phpbb.boardannouncements.listener:
         class: phpbb\boardannouncements\event\listener
         arguments:
+            - @cache.driver
             - @config
             - @config_text
             - @controller.helper
