--- a/composer.json
+++ b/composer.json
@@ -45,7 +45,7 @@
 	"extra": {
 		"display-name": "Board Announcements",
 		"soft-require": {
-			"phpbb/phpbb": ">=3.1.3,<3.2.*@dev"
+			"phpbb/phpbb": ">=3.1.3,<3.2.0@dev"
 		},
 		"version-check": {
 			"host": "www.phpbb.com",
