Make page name exactly match index.php

--- a/config/services.yml
+++ b/config/services.yml
@@ -9,6 +9,7 @@ services:
             - '@request'
             - '@template'
             - '@user'
+            - '%core.php_ext%'
         tags:
             - { name: event.listener }
 
