--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
 	"homepage": "https://www.phpbb.com",
 	"version": "1.0.6",
 	"keywords": ["phpbb", "extension", "announcements"],
-	"license": "GPL-2.0",
+	"license": "GPL-2.0-only",
 	"authors": [
 		{
 			"name": "Marc Alexander",
