--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
 		},
 		{
 			"name": "Matt Friedman",
-			"homepage": "http://mattfriedman.me",
+			"homepage": "http://vsephpbb.github.io",
 			"role": "Extensions Development Team Lead"
 		},
 		{
