--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "boardannouncements",
+	"name": "phpbb-boardannouncements",
 	"version": "1.1.1",
 	"author": "phpBB Limited",
 	"license": "GPL-2.0",
