--- a/composer.json
+++ b/composer.json
@@ -2,8 +2,8 @@
 	"name": "phpbb/boardannouncements",
 	"type": "phpbb-extension",
 	"description": "An extension which allows you to create board-wide announcements for your phpBB forum",
-	"homepage": "https://www.phpbb.com",
-	"version": "1.1.1-dev",
+	"homepage": "https://www.phpbb.com/customise/db/extension/boardannouncements/",
+	"version": "1.1.1",
 	"keywords": ["phpbb", "extension", "announcements"],
 	"license": "GPL-2.0-only",
 	"authors": [
