--- a/config/services.yml
+++ b/config/services.yml
@@ -34,6 +34,7 @@ services:
         class: phpbb\boardannouncements\controller\acp_controller
         arguments:
             - '@phpbb.boardannouncements.manager'
+            - '@config'
             - '@controller.helper'
             - '@language'
             - '@log'
