--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
 	"type": "phpbb-extension",
 	"description": "An extension which allows you to create board-wide announcements for your phpBB forum",
 	"homepage": "https://www.phpbb.com/customise/db/extension/boardannouncements/",
-	"version": "1.1.1",
+	"version": "1.2.0-dev",
 	"keywords": ["phpbb", "extension", "announcements"],
 	"license": "GPL-2.0-only",
 	"authors": [
@@ -35,7 +35,7 @@
 		}
 	],
 	"require": {
-		"php": ">=5.4",
+		"php": "^7.1.3 || ^8.0.0",
 		"composer/installers": "~1.0"
 	},
 	"require-dev": {
@@ -44,7 +44,7 @@
 	"extra": {
 		"display-name": "Board Announcements",
 		"soft-require": {
-			"phpbb/phpbb": ">=3.2.0"
+			"phpbb/phpbb": ">=3.3.0"
 		},
 		"version-check": {
 			"host": "www.phpbb.com",
