--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
 	"type": "phpbb-extension",
 	"description": "An extension which allows you to create board-wide announcements for your phpBB forum",
 	"homepage": "https://www.phpbb.com/customise/db/extension/boardannouncements/",
-	"version": "1.2.0-dev",
+	"version": "1.2.0",
 	"keywords": ["phpbb", "extension", "announcements"],
 	"license": "GPL-2.0-only",
 	"authors": [
