--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
 	"type": "phpbb-extension",
 	"description": "An extension which allows you to create board-wide announcements for your phpBB forum",
 	"homepage": "https://www.phpbb.com/customise/db/extension/boardannouncements/",
-	"version": "1.2.1",
+	"version": "1.2.2-dev",
 	"keywords": ["phpbb", "extension", "announcements"],
 	"license": "GPL-2.0-only",
 	"authors": [
@@ -44,7 +44,7 @@
 	"extra": {
 		"display-name": "Board Announcements",
 		"soft-require": {
-			"phpbb/phpbb": ">=3.3.0"
+			"phpbb/phpbb": ">=3.3.0,<4.0.0@dev"
 		},
 		"version-check": {
 			"host": "www.phpbb.com",
