--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,7 @@
 		"composer/installers": "~1.0"
 	},
 	"require-dev": {
-		"phing/phing": "2.4.*"
+		"phing/phing": "~2.4"
 	},
 	"extra": {
 		"display-name": "Board Announcements",
