--- a/.gitattributes
+++ b/.gitattributes
@@ -1,9 +1,7 @@
-tests/			export-ignore
-travis/			export-ignore
-.github/        export-ignore
-.travis.yml		export-ignore
+.github         export-ignore
 .gitignore		export-ignore
 .gitattributes	export-ignore
-phpunit.xml.*	export-ignore
-composer.lock	export-ignore
 build.xml		export-ignore
+composer.lock	export-ignore
+phpunit.xml.*	export-ignore
+tests			export-ignore
